# BISocie

./: .gitignore  Application.hs  BISocie.hs  Controller.hs  Foundation.hs  Import.hs  LICENSE  Model.hs  README.md  Settings.hs  StaticFiles.hs  bisocie.cabal  bisocie.hs  devel-server.hs  devel.hs  fastcgi.hs  main.hs  production.hs  simple-server.hs  stack.yaml
BISocie/Helpers/: Form.hs  Util.hs
BISocie/Helpers/Auth/: HashDB.hs  Owl.hs
Handler/: Admin.hs  Issue.hs  Participants.hs  Profile.hs  Project.hs  Root.hs  S3.hs  User.hs
Model/: Fields.hs
Settings/: StaticFiles.hs
cassius/: crosssearch.cassius  default-layout.cassius  home.cassius  humannetwork.cassius  issue.cassius  login.cassius  profile.cassius  project.cassius  schedule.cassius
config/: models  postgres.yml  postgresql.yml  routes  settings.yml
hamlet/: crosssearch.hamlet  default-layout.hamlet  editProfile.hamlet  footer.hamlet  header.hamlet  help.hamlet  home.hamlet  humannetwork.hamlet  issue.hamlet  issuelist.hamlet  login.hamlet  newissue.hamlet  newproject.hamlet  pagenate.hamlet~  paging.hamlet  profile.hamlet  project.hamlet  schedule.hamlet  viewProfile.hamlet
hamlet/s3/: upload.hamlet
julius/: crosssearch.julius  default-layout.julius  home.julius  humannetwork.julius  issue.julius  newproject.julius  profile.julius  project.julius  schedule.julius
messages/: en.msg  ja.msg
static/css/: jquery-ui-1.8.9.custom.css
static/img/: bisocie-logo.xcf  favicon.xcf
static/plugins/placeholder/: jquery.placeholder.js  jquery.placeholder.min.js
static/plugins/selection/: jquery.selection.js
templates/: change-pass.hamlet  crosssearch.hamlet  crosssearch.julius  default-layout-wrapper.hamlet  default-layout.cassius  default-layout.hamlet  default-layout.julius  default-layout.lucius  deleteUser.hamlet  editProfile.hamlet  footer.hamlet  header.hamlet  help.hamlet  help.julius  home.cassius  home.hamlet  home.julius  homepage.hamlet  humannetwork.cassius  humannetwork.hamlet  humannetwork.julius  issue.cassius  issue.hamlet  issue.julius  issuelist.hamlet  login.hamlet  newUser.hamlet  newissue.hamlet  newissue.julius  newproject.hamlet  newproject.julius  paging.hamlet  participants-list.hamlet  participants-list.julius  profile.cassius  profile.julius  project.hamlet  project.julius  schedule.hamlet  schedule.julius  (+4 more)
templates/s3/: upload.hamlet
tools/: send-reminder-mail.sh  update-0.3-to-0.4.sh
