name:                bisocie
version:             0.4
license:             BSD3
license-file:        LICENSE
author:              Seitoku Univ. Junior College, Department of Arts and Sciences
maintainer:          cutsea110@gmail.com
synopsis:            the yesod web application.
description:         a BTS written in haskell.
category:            Web
cabal-version:       >=1.8
build-type:          Simple
homepage:            https://github.com/cutsea110/BISocie

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model.Fields
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Root
                     Handler.Profile
                     Handler.Project
                     Handler.Issue
                     Handler.Participants
                     Handler.User
                     Handler.S3
                     Handler.Admin
                     BISocie.Helpers.Form
                     BISocie.Helpers.Util

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                TypeSynonymInstances
                FlexibleInstances
                TupleSections
                DeriveDataTypeable
                UndecidableInstances
                Rank2Types
                ScopedTypeVariables

    build-depends: base         >= 4       && < 5
                 , containers   >= 0.5     && < 0.6
                 , HTTP         >= 4000.2
                 , yesod        >= 1.2     && < 1.3
                 , yesod-core   >= 1.2     && < 1.3
                 , yesod-auth   >= 1.2     && < 1.3
                 , yesod-static >= 1.2     && < 1.3
                 , yesod-default >= 1.2    && < 1.3
                 , yesod-form   >= 1.3     && < 1.4
                 , yesod-pnotify >= 0.4    && < 0.5
                 , failure      >= 0.2     && < 0.3
                 , transformers
                 , mime-mail
                 , network      >= 2.4     && < 2.5
                 , wai
                 , wai-extra    >= 1.3     && < 1.4
                 , yaml         >= 0.8     && < 0.9
                 , http-conduit  >= 1.9    && < 1.10
                 , directory
                 , bytestring
                 , text
                 , persistent   >= 1.2     && < 1.3
                 , persistent-postgresql >= 1.2 && < 1.3
                 , persistent-template >= 1.2 && < 1.3
                 , http-types
                 , template-haskell
                 , hamlet
                 , language-javascript >= 0.5 && < 0.6
                 , hjsmin       >= 0.1  && < 0.2
                 , utility-ht
                 , warp
                 , filepath
                 , time         >= 1.1     && < 2.0
                 , old-locale
                 , parsec       >= 3.1     && < 3.2
                 , SHA          >= 1.6 && < 1.7
                 , shakespeare-text
                 , shakespeare-js
                 , shakespeare-css
                 , blaze-html   >= 0.6     && < 0.7
                 , blaze-markup >= 0.5     && < 0.6
                 , clientsession
                 , utf8-string  >= 0.3.7   && < 0.4
                 , data-default >= 0.5     && < 0.6
                 , conduit      >= 1.0     && < 1.1
                 , aeson        >= 0.6     && < 0.7
                 , crypto-pubkey >= 0.1 && < 0.2
                 , monad-logger >= 0.3 && < 0.4
                 , fast-logger >= 0.3 && < 0.4
                 , owl-auth >= 0.2 && < 0.3
                 , xml-hamlet >= 0.4 && < 0.5
                 , xml-conduit >= 1.1 && < 1.2

executable bisocie
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , bisocie
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , bisocie
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-default
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
