name:                bisocie
version:             0.6
license:             BSD3
license-file:        LICENSE
author:              Seitoku Univ. Junior College, Department of Arts and Sciences
maintainer:          cutsea110@gmail.com
synopsis:            the yesod web application.
description:         a BTS written in haskell.
category:            Web
cabal-version:       >=1.8
build-type:          Simple
homepage:            https://github.com/cutsea110/BISocie

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model.Fields
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.Root
                     Handler.Profile
                     Handler.Project
                     Handler.Issue
                     Handler.Participants
                     Handler.User
                     Handler.S3
                     Handler.Admin
                     BISocie.Helpers.Form
                     BISocie.Helpers.Util

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                TypeSynonymInstances
                UndecidableInstances
                Rank2Types
                ScopedTypeVariables

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.6      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.3
                 , persistent-postgresql         >= 2.1.1      && < 2.3
                 , persistent-template           >= 2.0        && < 2.3
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.2
                 , data-default
                 , aeson                         >= 0.6        && < 0.10
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.3
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time

                 , HTTP         >= 4000.2
                 , SHA          >= 1.6 && < 1.7
                 , blaze-html   >= 0.7     && < 0.9
                 , blaze-markup >= 0.6     && < 0.8
                 , crypto-pubkey >= 0.1 && < 0.3
                 , filepath
                 , http-types
                 , mime-mail
                 , network      >= 2.4     && < 2.7
                 , old-locale
                 , parsec       >= 3.1     && < 3.2
                 , utf8-string  >= 0.3.7   && < 1.1
                 , utility-ht
                 , wai >= 3.0 && < 3.1
                 , xml-conduit >= 1.2 && < 1.4
                 , xml-hamlet >= 0.4 && < 0.5

                 , owl-auth >= 0.2 && < 0.5
                 , yesod-pnotify >= 0.4    && < 0.7

executable bisocie
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , bisocie
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , bisocie
                 , yesod-test >= 1.4.3 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
